# npu-to-xe-core-test

./: LICENSE  README.md  SOURCE_PACKAGE.md  pyproject.toml  start-npu-bridge.bat
cache/: 5569605585228439704.blob  7915275480592360308.blob
docs/: github-publish-checklist.md  iris-npu-direction.md  shaderpack-integration.md  standalone-jar-setup.md
fabric-npu-bridge-mod/: README.md  build.gradle  gradle.properties
fabric-npu-bridge-mod - 복사본/: README.md  build.gradle  settings.gradle
fabric-npu-bridge-mod - 복사본/src/main/resources/: fabric.mod.json
shaderpacks/intel-npu-shader/: README.md
shaderpacks/intel-npu-shader/shaders/: composite.fsh  composite.vsh  final.fsh  gbuffers_basic.fsh  gbuffers_hand.fsh  gbuffers_terrain.vsh  gbuffers_textured_lit.fsh  gbuffers_water.fsh  shaders.properties  shadow.vsh
shaderpacks/intel-npu-shader/shaders/lib/: npu_policy.glsl
shaderpacks/intel-npu-shader2/: README.md
shaderpacks/intel-npu-shader2/shaders/: block.properties  composite.fsh  final.fsh  gbuffers_basic.fsh  gbuffers_basic.vsh  gbuffers_entities.fsh  gbuffers_hand_water.fsh  gbuffers_water.fsh  gbuffers_water.vsh  shaders.properties  shadow.fsh
src/cache/: 3245666865363033287.blob  6553245079183000653.blob  9578209736172584716.blob
src/npu_xmx/: __init__.py  bridge.py  cli.py  engine.py  translator_worker.py
src/npu_xmx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_bridge.py  test_engine.py  test_translator_worker.py
tools/: analyze_assist_log.py  export_translator_fixtures.py
(+38 files in other folders)
